--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello github page!
+<!doctype html>
+<html>
+	<head>
+		<title>gasin's page</title>
+		<meta charset="UTF-8">
+	</head>
+	<body>
+		<p>hello, world</p>
+		<p>このページを育てるぞい</p>
+	</body>
+</html>
+
+
