--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<p>hello, world</p>
+		<p><center><em><font size="6" color="blue">gasin's page</font></em></center></p>
 		<p>このページを育てるぞい</p>
 	</body>
 </html>
-
 
