--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 	<head>
 		<title>gasin's page</title>
 		<meta charset="UTF-8">
+		<style type="text/css">
+			#box1{
+				position: absolute;
+				top: 30px;
+				right: 30px;
+			}
+		</style>
 	</head>
 	<body>
 		<p><center><em><font size="6" color="blue">gasin's page</font></em></center></p>
+		<img id="box1" src="icon.jpg" width="100px" height="100px" alt="icon">
 		<p>このページを育てるぞい</p>
+		<a href="http://google.com">see you</a>
 	</body>
 </html>
 
