--- a/index.html
+++ b/index.html
@@ -9,13 +9,31 @@
 				top: 30px;
 				right: 30px;
 			}
+			body{
+				background-color: #d8edfc;
+				color: #000000;
+			}
 		</style>
 	</head>
 	<body>
-		<p><center><em><font size="6" color="blue">gasin's page</font></em></center></p>
+		<p><div align="center"><em><font size="7" color="blue">gasin's page</font></em></div></p>
 		<a href="https://twitter.com/_gacin"><img id="box1" src="icon.jpg" width="100px" height="100px" alt="icon"></a>
-		<p>このページを育てるぞい</p>
-		<a href="http://google.com">see you</a>
+		<font size="5">my hobby</font>
+		<dl>
+			<font size="4"><dt>Go</dt></font>
+				<font size="3">
+				<dd>tyzem9d</dd>
+				<dd>2nd place at the KoukouSensyuken and the KoukouSenbatu</dd>
+				</font>
+			<br>
+			<font size="4"><dt>competitive programming</dt></font>
+				<font size="3">
+				<dd><a href="http://codeforces.com/profile/gasin">codeforces</a></dd>
+				<dd><a href="https://www.topcoder.com/members/gasin/details/?track=DATA_SCIENCE&subTrack=SRM">topcoder</a></dd>
+				<dd><a href="https://atcoder.jp/user/gasin">atcoder</a></dd>
+				</font>
+		</dl>
+		<a href="http://google.com"><div align="right">see you</div></a>
 	</body>
 </html>
 
