--- a/index.html
+++ b/index.html
@@ -3,37 +3,27 @@
 	<head>
 		<title>gasin's page</title>
 		<meta charset="UTF-8">
-		<style type="text/css">
-			#box1{
-				position: absolute;
-				top: 30px;
-				right: 30px;
-			}
-			body{
-				background-color: #d8edfc;
-				color: #000000;
-			}
-		</style>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<p><div align="center"><em><font size="7" color="blue">gasin's page</font></em></div></p>
-		<a href="https://twitter.com/_gacin"><img id="box1" src="icon.jpg" width="100px" height="100px" alt="icon"></a>
-		<font size="5">my hobby</font>
+		<p><div id="title">gasin's page</div></p>
+		<a href="https://twitter.com/_gacin"><img id="icon" src="icon.jpg" width="100px" height="100px" alt="icon"></a>
+		<div class="normal2">my hobby</div>
 		<dl>
-			<font size="4"><dt>Go</dt></font>
-				<font size="3">
+			<div class="normal1"><dt>Go</dt></div>
+				<div class="normal">
 				<dd>tyzem9d</dd>
 				<dd>2nd place at the KoukouSensyuken and the KoukouSenbatu</dd>
-				</font>
+				</div>
 			<br>
-			<font size="4"><dt>competitive programming</dt></font>
-				<font size="3">
+			<div class="normal1"><dt>competitive programming</dt></div>
+				<div class="normal">
 				<dd><a href="http://codeforces.com/profile/gasin">codeforces</a></dd>
 				<dd><a href="https://www.topcoder.com/members/gasin/details/?track=DATA_SCIENCE&subTrack=SRM">topcoder</a></dd>
 				<dd><a href="https://atcoder.jp/user/gasin">atcoder</a></dd>
-				</font>
+				</div>
 		</dl>
-		<a href="http://google.com"><div align="right">see you</div></a>
+		<a href="http://google.com"><div align="right" class="normal">see you</div></a>
 	</body>
 </html>
 
