--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>gasin's page</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="style.css">
+		<script src="func.js"></script>
 	</head>
 	<body>
 		<p><div id="title">gasin's page</div></p>
@@ -23,6 +24,11 @@
 				<dd><a href="https://atcoder.jp/user/gasin">atcoder</a></dd>
 				</div>
 		</dl>
+		<p>
+		<form action="#">
+			<input type="button" value="click!" onclick="button();">
+		</form>
+		</p>
 		<a href="http://google.com"><div align="right" class="normal">see you</div></a>
 	</body>
 </html>
