--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</dl>
 		<p>
 		<form action="#">
-			<input type="button" value="click!" onclick="button();">
+			<div align="center"><input class="button" type="submit" value="click!" onclick="button();"></div>
 		</form>
 		</p>
 		<a href="http://google.com"><div align="right" class="normal">see you</div></a>
