--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<p><div id="title">gasin's page</div></p>
 		<a href="https://twitter.com/_gacin"><img id="icon" src="icon.jpg" width="100px" height="100px" alt="twitter"></a>
 		<img id="sityou" src="sityou.jpg" width="250px" height="250px" alt="tsumego">
+		<img id="zem" src="zem.jpg" width="250" height="400" alt="zem">
 		<div class="normal2">my hobby</div>
 		<dl>
 			<div class="normal1"><dt>Go</dt></div>
