--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>gasin's page</title>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" href="style.css">
 		<script src="func.js"></script>
 	</head>
@@ -38,7 +37,7 @@
 			</div>
 		</form>
 		</p>
-		<a href="http://google.com"><div align="right" class="normal">see you</div></a>
+		I recommend you to view this site on the PC. <a href="http://google.com"><div align="right" class="normal">see you</div></a>
 	</body>
 </html>
 
