--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 		</form>
 		</p>
 		I recommend you to view this site on the PC. <a href="http://google.com"><div align="right" class="normal">see you</div></a>
-		
+		<div id="twitter">
 		<a class="twitter-timeline" data-lang="en" data-width="300" data-height="500" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/_gacin">Tweets by _gacin</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+		</div>
 	</body>
 </html>
 
