--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 			</div>
 		</form>
 		</p>
-		I recommend you to view this site on the PC. <a href="http://google.com"><div align="right" class="normal">see you</div></a>
+		<div class="normal">I recommend you to view this site on the PC. <a href="http://google.com"><br>see you</a></div>
 		<div id="twitter">
-		<a class="twitter-timeline" data-lang="en" data-width="300" data-height="500" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/_gacin">Tweets by _gacin</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<a class="twitter-timeline" data-lang="en" data-width="300" data-height="450" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/_gacin">Tweets by _gacin</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
 	</body>
 </html>
