--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 				<dd><a href="https://atcoder.jp/user/gasin">atcoder</a></dd>
 				</div>
 		</dl>
-		<br><br>
 		<p>
 		<form action="#">
 			<div align="left">
+			<input class="button" type="submit" value="click!" onclick="changetitle();">
+			<br><br>
 			<input id="button0" class="button" type="submit" value="click!" onclick="button();">
 			<br><br>
 			<input class="button" type="submit" value="click!" onclick="drawCircle();">
