--- a/index.html
+++ b/index.html
@@ -4,45 +4,42 @@
 		<title>gasin's page</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="style.css">
-		<script src="func.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 	</head>
 	<body>
-		<p><div id="title">gasin's page</div></p>
-		<a href="https://twitter.com/_gacin"><img id="icon" src="icon.jpg" width="100px" height="100px" alt="twitter"></a>
-		<img id="sityou" src="sityou.jpg" width="250px" height="250px" alt="tsumego">
-		<img id="zem" src="zem.jpg" width="250" height="400" alt="zem">
-		<div class="normal2">my hobby</div>
-		<dl>
-			<div class="normal1"><dt>Go</dt></div>
-				<div class="normal">
-				<dd>tyzem9d</dd>
-				<dd>2nd place at the KoukouSensyuken and the KoukouSenbatu</dd>
-				</div>
-			<br>
-			<div class="normal1"><dt>Competitive Programming</dt></div>
-				<div class="normal">
-				<dd><a href="http://codeforces.com/profile/gasin">codeforces</a></dd>
-				<dd><a href="https://www.topcoder.com/members/gasin/details/?track=DATA_SCIENCE&subTrack=SRM">topcoder</a></dd>
-				<dd><a href="https://atcoder.jp/user/gasin">atcoder</a></dd>
-				</div>
-		</dl>
-		<p>
-		<form action="#">
-			<div align="left">
-			<input class="button" type="submit" value="click!" onclick="changetitle();">
-			<br><br>
-			<input id="button0" class="button" type="submit" value="click!" onclick="button();">
-			<br><br>
-			<input class="button" type="submit" value="click!" onclick="drawCircle();">
-			<canvas id="circle" width="140" height="140"></canvas>
-			</div>
-		</form>
-		</p>
-		<br><br><br>
-		<div class="normal">I recommend you to view this site on the PC. <a href="http://google.com"><br>see you</a></div>
-		<div id="twitter">
-		<a class="twitter-timeline" data-lang="en" data-width="300" data-height="570" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/_gacin">Tweets by _gacin</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-		</div>
+        <div class="header">gasin's page</div>
+        <div class="main">
+            <div class="topic">
+                <div class="subheader">about me</div>
+                <div class="component">
+                    <br>
+                    I'm a student at the University of Tokyo.<br>
+                    I'm a member of KGS and Igo club.<br>
+                    My twitter account is <a href="https://twitter.com/_gacin">@_gacin</a>.
+                </div>
+            </div>
+            <div class="topic">
+                <div class="subheader">my hobby</div>
+                <dl>
+                    <div class="category"><dt>Competitive Programming</dt></div>
+                    <div class="component">
+                        <dd><a href="http://codeforces.com/profile/gasin">codeforces</a></dd>
+                        <dd><a href="https://www.topcoder.com/members/gasin/details/?track=DATA_SCIENCE&subTrack=SRM">topcoder</a></dd>
+                        <dd><a href="https://atcoder.jp/user/gasin">atcoder</a></dd>
+                    </div>
+                    <div class="category"><dt>Go</dt></div>
+                    <div class="component">
+                        <dd>tyzem9d</dd>
+                        <dd>2nd place at the KoukouSensyuken and the KoukouSenbatu</dd>
+                    </div>
+                </dl>
+            </div>
+        </div>
+		<div class="footer">
+            I recommend you to view this site on the PC.
+        </div>
 	</body>
 </html>
 
