--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="component">
                     <br>
                     I'm a student at the University of Tokyo.<br>
-                    I'm a member of KGS and Igo club.<br>
+                    I'm a member of TSG and Igo club.<br>
                     My twitter account is <a href="https://twitter.com/_gacin">@_gacin</a>.
                 </div>
             </div>
