--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="category"><dt>Go</dt></div>
                     <div class="component">
-                        <dd>tyzem9d</dd>
+                        <dd>tygem9d</dd>
                         <dd>2nd place at the KoukouSensyuken and the KoukouSenbatu</dd>
                     </div>
                 </dl>
