--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 </dl>
             </div>
         </div>
+        <a class="twitter-timeline" href="https://twitter.com/_gacin">Tweets by gasin</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		<div class="footer">
             I recommend you to view this site on the PC.
         </div>
