--- a/index.html
+++ b/index.html
@@ -3,38 +3,55 @@
 	<head>
 		<title>gasin's page</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="func.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 	</head>
 	<body>
-        <div class="header">gasin's page</div>
+        <div class="header" onmouseover="appear();">gasin's page</div>
         <div class="main">
-            <div class="topic">
-                <div class="subheader">about me</div>
-                <div class="component">
-                    <br>
-                    I'm a student at the University of Tokyo.<br>
-                    I'm a member of TSG and Igo club.<br>
-                    My twitter account is <a href="https://twitter.com/_gacin">@_gacin</a>.
+            <div class="submain" id="introduce">
+                <div class="topic">
+                    <div class="subheader">about me</div>
+                    <div class="component">
+                        <br>
+                        I'm a student at the University of Tokyo.<br>
+                        I'm a member of TSG and Igo club.<br>
+                        My twitter account is <a href="https://twitter.com/_gacin">@_gacin</a>.
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="subheader">my hobby</div>
+                    <dl>
+                        <div class="category"><dt>Competitive Programming</dt></div>
+                        <div class="component">
+                            <dd><a href="http://codeforces.com/profile/gasin">codeforces</a></dd>
+                            <dd><a href="https://www.topcoder.com/members/gasin/details/?track=DATA_SCIENCE&subTrack=SRM">topcoder</a></dd>
+                            <dd><a href="https://atcoder.jp/user/gasin">atcoder</a></dd>
+                        </div>
+                        <div class="category"><dt>Go</dt></div>
+                        <div class="component">
+                            <dd>tygem9d</dd>
+                            <dd>2nd place at the KoukouSensyuken and the KoukouSenbatu</dd>
+                        </div>
+                    </dl>
                 </div>
             </div>
-            <div class="topic">
-                <div class="subheader">my hobby</div>
-                <dl>
-                    <div class="category"><dt>Competitive Programming</dt></div>
+            <div class="submain" id="gimmick">
+                <div class="topic">
+                    <div class="subheader">gimmick</div>
+                    <br>
                     <div class="component">
-                        <dd><a href="http://codeforces.com/profile/gasin">codeforces</a></dd>
-                        <dd><a href="https://www.topcoder.com/members/gasin/details/?track=DATA_SCIENCE&subTrack=SRM">topcoder</a></dd>
-                        <dd><a href="https://atcoder.jp/user/gasin">atcoder</a></dd>
+                        These are just for fun.<br>
+                        Please enjoy!<br>
                     </div>
-                    <div class="category"><dt>Go</dt></div>
-                    <div class="component">
-                        <dd>tygem9d</dd>
-                        <dd>2nd place at the KoukouSensyuken and the KoukouSenbatu</dd>
+                    <br>
+                    <div class="vanish">
+                        <div class="vanish" onmousemove="disappear();">vanish!!!</div>
                     </div>
-                </dl>
+                </div>
             </div>
         </div>
 		<div class="footer">
