--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 	<head>
 		<title>gasin's page</title>
 		<meta charset="UTF-8">
-        <link rel="stylesheet" media="all" href="style.css">
-        <link rel="stylesheet" media="all" href="tablet.css">
         <script type="text/javascript" src="func.js"></script>
+        <script>init();</script>
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
