--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>gasin's page</title>
 		<meta charset="UTF-8">
         <script type="text/javascript" src="func.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>init();</script>
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
