--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="subheader">about me</div>
                     <div class="component">
                         <br>
-                        I'm a student the University of Tokyo.<br>
+                        I'm a student of University of Tokyo.<br>
                         I'm a member of TSG and Igo club.<br>
                         My twitter account is <a href="https://twitter.com/_gacin">@_gacin</a>.
                     </div>
