--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<title>gasin's page</title>
 		<meta charset="UTF-8">
         <script type="text/javascript" src="func.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>init();</script>
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
@@ -55,8 +54,7 @@
                 </div>
             </div>
         </div>
-		<div class="footer">
-            I recommend you to view this site on the PC.
+		<div class="footer" id="footer">
         </div>
 	</body>
 </html>
