--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     </dl>
                 </div>
             </div>
-            <div class="submain">
+            <div class="submain" id="gimmick">
                 <div class="topic">
-                    <div class="subheader" id="gimmick">gimmick</div>
+                    <div class="subheader" id="gimmick_title">gimmick</div>
                     <br>
                     <div class="component">
                         These are just for fun.<br>
