--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 	</head>
 	<body>
-        <div class="header" onmouseover="appear();">gasin's page</div>
+        <div class="header" onmouseover="appear();">
+            <span class="free"></span>
+            gasin's page
+        </div>
         <div class="main" id="main">
             <div class="submain" id="introduce">
                 <div class="topic">
