--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	</head>
 	<body>
         <div class="header" onmouseover="appear();">
-            <span class="free"></span>
             gasin's page
         </div>
         <div class="main" id="main">
@@ -51,6 +50,8 @@
                         These are just for fun.<br>
                         Please enjoy!<br>
                     </div>
+                    <br>
+                    <div class="swell" id="swell" onmouseover="swell();">swell</div>
                     <br>
                     <div class="black" onmouseover="black();" onmouseout="preblack();">black</div>
                     <br>
